# ACM2017

./: .gitignore  CMakeLists.txt  README.md  a-labyrinth.cpp  c-jollo.cpp  d-war.cpp  e-frog.cpp  g-bits.cpp  i-critical.cpp
tests/: bits.in  critical.in  frog.in  jollo.in  labyrinth.in
